integration-tests/utils/nexus/route-nexus-ui.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: nexus-ui
spec:
  port:
    targetPort: nexus-ui
  tls:
    termination: edge
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
